# sankhya-v2

./: .gitignore  ImportacaoXMLNotasSP.validarImportacao.json  actionButton.py  actionButtonSp.json  api.test.sh  app.js  cacsp.confirmarNota.json  erro.txt  functions.js  incluirAlterarCabecalhoNota.json  package-lock.json  pyproject.toml  query.py  refs.md  req.interface.ts  requirements.txt  search.json  snk.js  snk.py  test.js  test.py
config/: config.toml
src/: init.js
src/config/: config.toml
src/core/: LancarCTEs.py  getNuarquivoFromNumnotas.py  launch.py  launch2.py
src/services/: AlterarPedidoNota.py  ConfirmarNota.py  ImportCte.py  Query.py  __init__.py  actionButton.py  carregarRegistros.py  deletarRegistros.py  fixDivergenceCTE.py  getConfigFromNuarquivo.py  getNuarquivoFromNumnotas.py  pesquisaPedidoLivroFiscal.py  processarNotaArquivo.py  removePedidoLivroFiscal.py  test.xml  validaXMLNuarquivo.py  validarImportacaoXML.py
src/utils/: __init__.py  getCookies.py  load_config.py  logger.py  logging_config_json.py  my_logger.py  snk_requester.py  wrapper.py
tests/: test_validaXMLNuarquivo.py
yrefs/: DatasetSP.save.json  DbExplorerSP.executeQuery.json  ImportacaoXMLNotasSP.processarArquivo.json  ImportacaoXMLNotasSP.validarImportacao.json  MovimentoLivroFiscal.json  RenegociacaoSP.renegociar.json  dataSp.LoadRecords.json  dataSp.RemoveRecord.json
